@@ -12,7 +12,7 @@
 
   <properties>
     <jupiter.version>5.11.0</jupiter.version>
-    <mockito.version>5.12.0</mockito.version>
+    <mockito.version>5.13.0</mockito.version>
   </properties>
 
   <dependencies>
@@ -45,12 +45,12 @@
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy</artifactId>
-      <version>1.15.0</version>
+      <version>1.15.1</version>
     </dependency>
     <dependency>
       <groupId>net.bytebuddy</groupId>
       <artifactId>byte-buddy-agent</artifactId>
-      <version>1.15.0</version>
+      <version>1.15.1</version>
     </dependency>
 
     <dependency>
@@ -141,14 +141,6 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <useModulePath>false</useModulePath>
-          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 </project>
