@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.12.0</version>
+      <version>5.13.0</version>
       <optional>true</optional>
     </dependency>
 
@@ -91,6 +91,7 @@
           <show>public</show>
           <linksource>true</linksource>
           <overview>src/main/javadoc/overview.html</overview>
+          <!-- Javadoc-No-Preview -->
         </configuration>
         <executions>
           <execution>
@@ -100,17 +101,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            --add-opens io.avaje.inject/io.avaje.inject.spi=ALL-UNNAMED
-            --add-opens io.avaje.inject/io.avaje.inject.aop=ALL-UNNAMED
-          </argLine>
-        </configuration>
       </plugin>
 
     </plugins>
